<resources>
    <string name="app_name">navegaçãoEntreTelas</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="header">Dados do livro</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="paginas">Quantidade de paginas</string>

    <string name="add">Add</string>
    <string name="cancel">Cancelar</string>
</resources>